Update InnerMaps with subscription features and Stripe integration

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*.stripe.com https://*.supabase.co; script-src 'self' https://*.stripe.com https://*.supabase.co; connect-src 'self' https://*.stripe.com https://*.supabase.co; frame-src 'self' https://*.stripe.com https://*.supabase.co; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;">
     <title>InnerMaps</title>
   </head>
   <body>
